Fix custom style for calendar date on mobile.

--- a/custom-style.css
+++ b/custom-style.css
@@ -9,5 +9,6 @@ Klicke auf das Hilfe-Symbol oben, um mehr zu lernen.
 p.byline {display: block;}
 p.byline i.fa {color: #e6007e;}
 
+.ai1ec-date-title {background:#e6e6e6!important}
 .ai1ec-calendar-link {color:#333!important}
 .timely ul li:before {content: "";}
